--- a/Starter_Code/NoSQL_analysis_starter.ipynb
+++ b/Starter_Code/NoSQL_analysis_starter.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "18ab463c",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [
@@ -111,6 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Establishments with hygene score equal to 20: 41\n",
       "{'AddressLine1': '5-6 Southfields Road',\n",
       " 'AddressLine2': 'Eastbourne',\n",
       " 'AddressLine3': 'East Sussex',\n",
@@ -156,6 +157,7 @@
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
     "count_hygiene_20 = establishments.count_documents({\"scores.Hygiene\": 20})\n",
+    "print(f\"Establishments with hygene score equal to 20: {count_hygiene_20}\")\n",
     "\n",
     "# Display the first document in the results using pprint\n",
     "pprint(query.next())\n"
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
@@ -588,7 +590,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -622,6 +624,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Establishments in London with Rating Value greater or equal to 4: 33\n",
       "{'AddressLine1': 'Oak Apple Farm Building 103 Sheernes Docks',\n",
       " 'AddressLine2': 'Sheppy Kent',\n",
       " 'AddressLine3': '',\n",
@@ -671,13 +674,16 @@
     "count_london_high_rating = establishments.count_documents(\n",
     "    {\"LocalAuthorityName\": {\"$regex\": \"London\"}, \"RatingValue\": {\"$gte\": 4}}\n",
     ")\n",
+    "\n",
+    "print(f\"Establishments in London with Rating Value greater or equal to 4: {count_london_high_rating}\")\n",
+    "\n",
     "# Display the first document in the results using pprint\n",
     "pprint(query.next())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "id": "07e24ccb",
    "metadata": {},
    "outputs": [
@@ -1126,7 +1132,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
@@ -1375,14 +1381,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "id": "a6ad16f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Thanet</td>\n",
+       "      <td>1130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Greenwich</td>\n",
+       "      <td>882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Maidstone</td>\n",
+       "      <td>713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Newham</td>\n",
+       "      <td>711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Swale</td>\n",
+       "      <td>686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Chelmsford</td>\n",
+       "      <td>680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Medway</td>\n",
+       "      <td>672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Bexley</td>\n",
+       "      <td>607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Southend-On-Sea</td>\n",
+       "      <td>586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Tendring</td>\n",
+       "      <td>542</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               _id  count\n",
+       "0           Thanet   1130\n",
+       "1        Greenwich    882\n",
+       "2        Maidstone    713\n",
+       "3           Newham    711\n",
+       "4            Swale    686\n",
+       "5       Chelmsford    680\n",
+       "6           Medway    672\n",
+       "7           Bexley    607\n",
+       "8  Southend-On-Sea    586\n",
+       "9         Tendring    542"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert result to Pandas DataFrame\n",
     "results_list = list(results)\n",
-    "top5_df = pd.DataFrame(results_list)\n"
+    "top5_df = pd.DataFrame(results_list)\n",
+    "top5_df.head(10)\n"
    ]
   },
   {
@@ -1395,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "id": "4eeb227e",
    "metadata": {},
    "outputs": [
@@ -1453,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "id": "d8aab364",
    "metadata": {},
    "outputs": [
