--- a/Starter_Code/NoSQL_setup_starter.ipynb
+++ b/Starter_Code/NoSQL_setup_starter.ipynb
@@ -25,12 +25,12 @@
     "\n",
     "Within this markdown cell, copy the line of text you used to import the data from your Terminal. This way, future analysts will be able to repeat your process.\n",
     "\n",
-    "e.g.: Import the dataset with `YOUR IMPORT TEXT HERE`"
+    "e.g.: Import the dataset with `mongoimport --db uk_food --collection establishments --file establishments.json --jsonArray`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -131,11 +131,11 @@
       " 'PostCode': 'CT19 6AB',\n",
       " 'RatingDate': '2015-08-27T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('664bc832b46427c46f2630f7'),\n",
-      " 'geocode': {'latitude': '51.08084', 'longitude': '1.188537'},\n",
+      " 'geocode': {'latitude': 51.08084, 'longitude': 1.188537},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/289352',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
